@@ -67,6 +67,19 @@
     <label for="show_minor">Include &#8220;minor edits&#8221; in Recent Changes.</label>
     </p>
 
+    <p>
+      <label for="default_edit_type">Default edit type:</label>
+      <select name="default_edit_type">
+        [% IF default_edit_type == 'normal' %]
+          <option value="normal" selected="1">Normal edit</option>
+          <option value="tidying">Minor tidying</option>
+        [% ELSE %]
+          <option value="normal">Normal edit</option>
+          <option value="tidying" selected="1">Minor tidying</option>
+        [% END %]
+      </select>
+    </p>
+
     <input type="submit" value="Set it" class="form_button" />
     <input type="hidden" name="action" value="set_preferences">
   </form>
@@ -105,6 +118,14 @@
   <p>Minor edits
     [% UNLESS show_minor_edits_in_rc %] not [% END %]
   included in Recent Changes.</p>
+
+  <p>Default edit type set to
+    [% IF default_edit_type == 'normal' %]
+      &#8220;Normal edit&#8221;.
+    [% ELSE %]
+      &#8220;Minor tidying&#8221;.
+    [% END %]
+  </p>
 
 <ul>
   <li><a href="[% full_cgi_url %]">Return to [% site_name %]</a></li>
